# serial-mux

./: README.md  README_zh.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
serial_mux/: __init__.py  __main__.py  cli.py  client.py  config.py  daemon.py  protocol.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_protocol.py  test_serial_bind.py  test_ssh.py  test_utils.py
